--- a/why_short_availability_matters_v2.ipynb
+++ b/why_short_availability_matters_v2.ipynb
@@ -979,7 +979,7 @@
     "   \\end{cases}\n",
     "   $\n",
     "\n",
-    "   We then hedge out the systematic market risk of this lon only approach using a low-cost ETF or futures contract. The gross return of the final hedged strategy would be:\n",
+    "   We then hedge out the systematic market risk of this long-only approach using a low-cost ETF or futures contract. The gross return of the final hedged strategy would be:\n",
     "\n",
     "   $\n",
     "   R_{\\text{strat,hedge}} = S' R_{\\text{asset}} - B_{\\text{market}} R_{\\text{market}}\n",
