--- a/why_short_availability_matters.ipynb
+++ b/why_short_availability_matters.ipynb
@@ -935,12 +935,12 @@
     "\n",
     "\n",
     "**Step 1: Estimate Constraint Impact**  \n",
-    "Calculate the performance drag caused by short constraints:\n",
+    "Calculate the performance drag caused by short constraints by deducting the means of the series:\n",
     "\n",
-    "$ \\Delta_{\\text{post}} = r_{\\text{excl, post}} - r_{\\text{incl, post}} $\n",
+    "$ \\Delta_{\\text{post}} = \\overline{r}_{\\text{excl, post}} - \\overline{r}_{\\text{incl, post}} $\n",
     "\n",
     "**Step 2: Adjust Returns pre $ T - N_2 $**  \n",
-    "Estimate the pre-availability returns by applying the observed performance impact:  \n",
+    "Estimate the pre-availability returns by deducting the mean observed performance impact delta from the naive returns:  \n",
     "\n",
     "$ \\hat{r}_{\\text{incl, pre}} = r_{\\text{excl, pre}} - \\Delta_{\\text{post}} $\n",
     "\n",
@@ -991,7 +991,7 @@
     "   \\end{cases}\n",
     "   $\n",
     "\n",
-    "   We then hedge out the systematic market risk of this long-only approach using a low-cost ETF or futures contract. The gross return of the final hedged strategy would be:\n",
+    "   We then hedge out the systematic market risk of this long-only approach using a market/industry low-cost ETF or futures contract. The gross return of the final hedged strategy would be:\n",
     "\n",
     "   $\n",
     "   R_{\\text{strat,hedge}} = S' R_{\\text{asset}} - B_{\\text{market}} R_{\\text{market}}\n",
