--- a/why_short_availability_matters.ipynb
+++ b/why_short_availability_matters.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Our predictions were right, but we simply couldn’t get the trades executed. That experience made one thing painfully clear: **historical short availability data wasn’t just a minor detail—it was a critical ingredient for making realistic backtests.**  \n",
     "\n",
-    "No problem, we thought. We’d just buy the historical data from data providers. But after endless searching and countless meetings, we realized no one had what we needed—intraday short availability data for all U.S. stocks. Later, we hit the same roadblock with crypto.  \n",
+    "No problem, we thought. We’d just buy the historical data from data providers. But after endless searching and countless meetings, we realized no one had what we needed—intraday short availability data for all U.S. stocks, for our specific prime broker. Later, we hit the same roadblock with crypto.  \n",
     "\n",
     "And so, our journey began: **if the data didn’t exist, we’d record it ourselves.**  \n",
     "\n",
@@ -48,12 +48,12 @@
     "\n",
     "We now maintain two historical datasets:  \n",
     "\n",
-    "1. **U.S. Stock Short Availability, Short Fees, Short Rebates (via Interactive Brokers – a prime US broker)**\n",
+    "1. **U.S. Stock Short Availability, Short Fees, Short Rebates (leading prime U.S. broker)**\n",
     "- Coverage: All U.S. stocks (survivorship bias-free)\n",
     "- Data since: August 2023 (to present)\n",
     "- Frequency: Every 15 minutes (incl. pre and post market)\n",
     "- Quality: +95% uptime (some minor gaps due to downtime)\n",
-    "- Source: Interactive Brokers (data is publicly available real-time, we have historically recorded it)\n",
+    "- Source: Leading prime U.S. broker (data is publicly available real-time, we have historically recorded it)\n",
     "2. **Crypto Short Availability (via Binance)**\n",
     "- Coverage: All USDT-denominated cryptocurrencies (survivorship bias-free)\n",
     "- Data since: June 2024 (to present)\n",
