--- a/why_short_availability_matters.ipynb
+++ b/why_short_availability_matters.ipynb
@@ -967,7 +967,7 @@
     "A natural question arises: if borrow constraints exist, how can one still extract alpha? In the case of stocks, two potential approaches come to mind:\n",
     "\n",
     "1) **Using Multiple Brokers:**  \n",
-    "   While we can expect some correlation between prime broker availability constraints, it is possible that certain brokers may have shares available for borrowing when others do not. The practical challenge here is that, since we are currently collecting data only from Interactive Brokers, the viability of this approach is difficult to test historically.\n",
+    "   While we can expect some correlation between prime broker availability constraints, it is possible that certain brokers may have shares available for borrowing when others do not. The practical challenge here is that, since we are currently collecting data only from sources from our Prime Broker, the viability of this approach is difficult to test historically.\n",
     "\n",
     "2) **Market-Hedged, Long-Only Strategy:**  \n",
     "   Consider a basic discrete short strategy where our signal $ S $ is defined as:\n",
